<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/chess"
        android:title="@string/game" />


    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/friends" />



    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_textsms_black_24dp"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/shop"
        android:title="@string/shop" />

</menu>
